<resources>
    <string name="app_name">Trainy</string>
    <string name="welcome">Hi and welcome to Trainy!</string>
    <string name="still_no_account">Register here!</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="coach_or_trainer">So, are you a coach or a trainer?</string>
    <string name="im_coach">3... 2... 1... GO! Coach</string>
    <string name="im_trainer">Efficient my gains! Trainer</string>
    <string name="whats_up_coach">So coach, what\'s up?</string>
    <string name="whats_up_trainer">So trainer, what\'s up?</string>
    <string name="know_you">Let\'s get to know you :)</string>
    <string name="register_input_email">Email address?</string>
    <string name="login_input_email">Email address</string>
    <string name="register_input_password">Password to keep you safe?</string>
    <string name="second_register_input_password">Type the same password again</string>
    <string name="login_input_password">Password</string>
    <string name="register">Sign me up!</string>
    <string name="login_button_text">Login</string>
    <string name="register_input_name">What\'s your name?</string>
    <string name="remember_me_text">Remember me</string>
    <string name="phone_number_input">Phone Number</string>
    <string name="send_me_otp">Send Me</string>
    <string name="please_enter_number_text">Please enter your phone number</string>
    <string name="under_please_enter_number_text">We will send you the code soon!</string>
    <string name="verify_otp">Verify</string>
    <string name="enter_otp_code">Enter Code</string>
    <string name="please_enter_code_text">Please enter the code</string>
    <string name="empty_phone_input">Please enter valid phone number</string>
    <string name="one_detail_missing">Password or Email missing</string>
    <string name="email_error">Please write your real email</string>
    <string name="home_fragment">Home</string>
    <string name="my_profile_string">Profile</string>
    <string name="my_questions_string">My Questions</string>
    <string name="chat">Chats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>