<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainLogin"
    android:background="@drawable/light_white">

    <ImageView
        android:id="@+id/coach_app_logo"
        android:layout_width="216dp"
        android:layout_height="234dp"
        android:src="@drawable/logo_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/coach_email_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_baseline_alternate_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/login_input_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textColorHint="@color/black"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/coach_password_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/login_input_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textColorHint="@color/black"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/remember_me_checkbox"
        android:layout_width="136dp"
        android:layout_height="27dp"
        android:buttonTint="@color/light_gold"
        android:text="@string/remember_me_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59"
        tools:ignore="MissingConstraints,OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/coach_sign_up"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/still_no_account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>