<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpInput"
    android:background="@drawable/light_white">

    <ImageView
        android:id="@+id/coach_app_logo"
        android:layout_width="216dp"
        android:layout_height="234dp"
        android:src="@drawable/logo_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/please_enter_number_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_number_text"
        android:textSize="26sp"
        android:textAlignment="center"
        android:textColor="@color/dark_gold"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/under_please_enter_number_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/under_please_enter_number_text"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/dark_gold"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/otp_input_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:hint="@string/phone_number_input"
        android:inputType="phone"
        android:paddingTop="5dp"
        android:paddingEnd="25dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/gray"
        android:textSize="21sp"
        android:textColor="@color/black"
        android:ellipsize="start"
        android:backgroundTint="@color/dark_gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/otp_send_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/send_me_otp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>