<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterClass"
    android:background="@drawable/light_white">

    <TextView
        android:id="@+id/coach_get_to_know_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/know_you"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/coach_name_box"
        android:inputType="textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:hint="@string/register_input_name"
        android:background="@drawable/custom_input"
        android:textSize="21sp"
        android:drawablePadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textColorHint="@color/black"
        android:drawableEnd="@drawable/ic_baseline_person_add_24"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/coach_email_box"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_marginTop="45dp"
        android:hint="@string/register_input_email"
        android:background="@drawable/custom_input"
        android:textSize="21sp"
        android:drawablePadding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:drawableEnd="@drawable/ic_baseline_alternate_email_24"
        tools:ignore="MissingConstraints" />


    <Spinner
        android:id="@+id/editTeamSpinner"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:spinnerMode="dropdown"
        android:background="@drawable/spinner_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/coach_password_box1"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_marginTop="48dp"
        android:hint="@string/register_input_password"
        android:background="@drawable/custom_input"
        android:textSize="21sp"
        android:drawablePadding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/coach_password_box2"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_marginTop="48dp"
        android:hint="@string/second_register_input_password"
        android:background="@drawable/custom_input"
        android:textSize="21sp"
        android:drawablePadding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/coach_sign_up"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/coach_register_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>